Started linear algebra

--- a/Notes/Machine Learning - Week 1.ipynb
+++ b/Notes/Machine Learning - Week 1.ipynb
@@ -31,23 +31,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Representation\n",
-    "\n",
-    "$m$ - Number of training examples, $x$ - Input variables, $y$ - Output variables\n",
-    "\n",
-    "$(x,y)$ - One training example, $(x_i,y_i)$ - $i$th training example\n",
-    "\n",
-    "Training Set $\\rightarrow$ Learning Algorithm $\\rightarrow$ $h$\n",
-    "\n",
-    "**Hypothesis:**\n",
-    " - $h$ maps $x$'s to $y$'s\n",
-    " - $h_{\\theta}(x) = \\theta_0 + \\theta_1x$ in Univariate Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Linear Regression"
    ]
   },
@@ -64,11 +47,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Representation\n",
+    "\n",
+    "$m$ - Number of training examples, $x$ - Input variables, $y$ - Output variables\n",
+    "\n",
+    "$(x,y)$ - One training example, $(x_i,y_i)$ - $i$th training example\n",
+    "\n",
+    "Training Set $\\rightarrow$ Learning Algorithm $\\rightarrow$ $h$\n",
+    "\n",
+    "**Hypothesis:** $h$ maps $x$'s to $y$'s $\\rightarrow$ In univariate regrission, this is: $h_{\\theta}(x) = \\theta_0 + \\theta_1x$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cost\n",
     "\n",
     "**Cost Function:** A measure of how well the line fits\n",
     "\n",
-    "**MSE (Mean Squared Error):** A measure of the average difference between predicted and actual values: $J(\\theta_1,\\theta_2) = {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}$\n",
+    "**MSE (Mean Squared Error):** A measure of the average difference between predicted and actual values $\\rightarrow$ $J(\\theta_1,\\theta_2) = {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}$\n",
     " - We square to get rid of negatives\n",
     " - We divide average by 2 to make gradient descent differentiation easier\n",
     " - MSE can be visualized as a function of $\\theta_0, \\theta_1$ using contour plots (2D depictions of 3D plots)\n",
