Finished linear algebra review

--- a/Notes/Machine Learning - Linear Algebra Review.ipynb
+++ b/Notes/Machine Learning - Linear Algebra Review.ipynb
@@ -16,6 +16,7 @@
     "$$\\begin{bmatrix}\n",
     "a & b & c \\\\\n",
     "d & e & f \\\\\n",
+    "g & h & i \\\\\n",
     "j & k & l\n",
     "\\end{bmatrix}$$\n",
     "\n",
@@ -29,8 +30,10 @@
     "**Vector:** Matrix with one column and many rows $\\rightarrow$ subset of matrices\n",
     "\n",
     "$$\\begin{bmatrix}\n",
-    "w & x & y & z\\\\\n",
-    "\\end{bmatrix}$$\n",
+    "w \\\\\n",
+    "x \\\\\n",
+    "y \\\\\n",
+    "z\\end{bmatrix}$$\n",
     "\n",
     "This vector is a $4\\times1$ matrix"
    ]
@@ -50,15 +53,21 @@
     "\n",
     "$A_{ij}$ $\\rightarrow$ Element in the $i$th row and $j$th column of matrix $A$\n",
     "\n",
+    "$v_i$ $\\rightarrow$ Element in the $i$th row of vector $v$\n",
+    "\n",
     "$n$-dimensional vector $\\rightarrow$ Vector with $n$ rows\n",
     "\n",
     "$\\mathbb{R}$ $\\rightarrow$ Set of scalar real numbers\n",
     "\n",
     "$\\mathbb{R}^n$ $\\rightarrow$ Set of n-dimensional vectors of real numbers \n",
     "\n",
-    "Notes:\n",
+    "Matrices are usually uppercase while vectors are lowercase\n",
+    "\n",
+    "Notes on Matlab/Python Comparison:\n",
     " - Matlab is 1-indexed, Python is 0-indexed\n",
-    " - Matrices are usually uppercase while vectors are lowercase"
+    " - Matlab vectors are by default $m \\times 1$, whereas python vectors are by default $m$\n",
+    "     - To promote a Python vector to $m \\times 1$ use `v[:,None]`\n",
+    "     - To promote a Python vector to $1 \\times n$ use `v[None,:]`"
    ]
   },
   {
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +93,15 @@
       " [10 11 12]]\n",
       "\n",
       "Vector v\n",
+      "[1 2 3]\n",
+      "Promoted to Matrix\n",
       "[[1]\n",
       " [2]\n",
       " [3]]\n",
       "\n",
       "Dimension of A = (4, 3)\n",
-      "Dimension of v = (3, 1)\n",
+      "Dimension of v = (3,)\n",
+      "Dimension of v Promoted to Matrix = (3, 1)\n",
       "\n",
       "Value at Row 2 Column 3 = 6\n"
      ]
@@ -105,15 +117,15 @@
     "              [10,11,12]])\n",
     "\n",
     "# Initialize a vector\n",
-    "v = np.array([[1],\n",
-    "              [2],\n",
-    "              [3]])\n",
+    "v = np.array([1,2,3])\n",
     "\n",
     "# Get the dimension of matrix A\n",
     "dim_A = A.shape\n",
     "\n",
     "# Get the dimension of the vector v\n",
     "dim_v = v.shape\n",
+    "# Promote v to a column matrix\n",
+    "dim_v_matrix = v[:,None].shape\n",
     "\n",
     "# Index into row 2 column 3 of matrix A\n",
     "A_23 = A[1][2]\n",
@@ -122,8 +134,11 @@
     "print(A)\n",
     "print(\"\\nVector v\")\n",
     "print(v)\n",
+    "print(\"Promoted to Matrix\")\n",
+    "print(v[:,None])\n",
     "print(\"\\nDimension of A = \" + str(dim_A))\n",
     "print(\"Dimension of v = \" + str(dim_v))\n",
+    "print(\"Dimension of v Promoted to Matrix = \" + str(dim_v_matrix))\n",
     "print(\"\\nValue at Row 2 Column 3 = \" + str(A_23))"
    ]
   },
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -321,25 +336,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix-Vector Multiplication\n",
+      "[ 6 15 24]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO TODO TODO\n",
-    "# # Initialize matrix A\n",
-    "# A = np.array([[1,2,3],\n",
-    "#               [4,5,6],\n",
-    "#               [7,8,9]])\n",
-    "# # Initialize vector v\n",
-    "# v = np.array([[2],\n",
-    "#               [1],\n",
-    "#               [1]])\n",
+    "# Initialize matrix A\n",
+    "A = np.array([[1,2,3],\n",
+    "              [4,5,6],\n",
+    "              [7,8,9]])\n",
+    "# Initialize vector v\n",
+    "v = np.array([1,1,1])\n",
     "\n",
-    "# # Multiply A * v\n",
-    "# Av = A*v\n",
+    "# Multiply A * v\n",
+    "# Note: np.dot (A,v) considers v nx1, np.dot(v,A) considers v 1xn\n",
+    "Av = np.dot(A,v)\n",
     "\n",
-    "# print(\"Matrix-Vector Multiplication\")\n",
-    "# print(Av)"
+    "print(\"Matrix-Vector Multiplication\")\n",
+    "print(Av)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix-Matrix Multiplication\n",
+    "\n",
+    "Multiply matrix A by matrix B by breaking B into component vectors and multiply A by each vector in B, concatenating the result\n",
+    " - $m \\times n$ matrix multiplied by $n \\times o$ matrix results in an $m \\times o$ matrix\n",
+    " - Num cols in the first matrix must equal num rows in the second matrix\n",
+    "\n",
+    "$$\\begin{bmatrix}\n",
+    "a & b \\\\\n",
+    "c & d \\\\\n",
+    "e & f \\\\\n",
+    "\\end{bmatrix} \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "w & x \\\\\n",
+    "y & z\n",
+    "\\end{bmatrix} =\n",
+    "\\begin{bmatrix}\n",
+    "aw+by & ax+bz \\\\\n",
+    "cw+dy & cx+dz \\\\\n",
+    "ew+fy & ex+fz\n",
+    "\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix-Matrix Multiplication\n",
+      "[ 5 11 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a 3x2 matrix A\n",
+    "A = np.array([[1,2],\n",
+    "              [3,4],\n",
+    "              [5,6]])\n",
+    "\n",
+    "# Initialize a 2x1 matrix B\n",
+    "B = np.array([1,2])\n",
+    "\n",
+    "# Multiply A*B: Expect a matrix of (3x2)*(2x1)=(3x1)\n",
+    "AB = np.dot(A,B)\n",
+    "\n",
+    "print(\"Matrix-Matrix Multiplication\")\n",
+    "print(AB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix Multiplication Properties\n",
+    "\n",
+    "Matrices are not commutative: $A \\cdot B \\neq B \\cdot A$\n",
+    "\n",
+    "Matrices are associative: $(A \\cdot B) \\cdot C = A \\cdot (B \\cdot C)$\n",
+    "\n",
+    "**Identity Matrix:** When multiplied by any matrix of the same dimension, it results in the original matrix\n",
+    " - Has 1s on the diagonal (upper-left to lower-right diagonal), 0s elsewhere\n",
+    " - When multiplying after some matrix ($A \\times I$) the square identity matrix's dimension should match the other matrix's *columns*\n",
+    " - When multiplying after some matrix ($I \\times A$) the square identity matrix's dimension should match the other matrix's *rows*\n",
+    " \n",
+    "$$\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 \n",
+    "\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I*A = A*I\n",
+      "[[1. 2.]\n",
+      " [4. 5.]]\n",
+      "[[1. 2.]\n",
+      " [4. 5.]]\n",
+      "\n",
+      "A*B != B*A\n",
+      "[[ 1  5]\n",
+      " [ 4 14]]\n",
+      "[[ 5  7]\n",
+      " [ 8 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize matrices A and B\n",
+    "A = np.array([[1,2],\n",
+    "              [4,5]])\n",
+    "B = np.array([[1,1],\n",
+    "              [0,2]])\n",
+    "\n",
+    "# Initialize a 2x2 identity matrice\n",
+    "I = np.eye(2)\n",
+    "\n",
+    "IA = np.dot(I,A)\n",
+    "AI = np.dot(A,I)\n",
+    "\n",
+    "AB = np.dot(A,B)\n",
+    "BA = np.dot(B,A)\n",
+    "\n",
+    "print(\"I*A = A*I\")\n",
+    "print(IA)\n",
+    "print(AI)\n",
+    "print(\"\\nA*B != B*A\")\n",
+    "print(AB)\n",
+    "print(BA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inverse and Transpose\n",
+    "\n",
+    "**Inverse of Matrix:** Denoted by $A^{-1}$, multiplying by the inverse results in the identity matrix\n",
+    " - Non-square matrices do not have an inverse matrix\n",
+    " - *Singular/Degenerate* means the matrix doesn't have an inverse\n",
+    "\n",
+    "**Transposition:** Rotating the matrix 90 degrees clockwise and then reversing it.\n",
+    "\n",
+    "$$A = \\begin{bmatrix}\n",
+    "a & b \\\\\n",
+    "c & d \\\\\n",
+    "e & f \\\\\n",
+    "\\end{bmatrix} \\rightarrow\n",
+    "A^T = \\begin{bmatrix}\n",
+    "a & c & e \\\\\n",
+    "b & d & f\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Therefore, $A_{ij} = A_{ji}^T$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 7]\n",
+      " [2 5 0]\n",
+      " [0 6 9]]\n",
+      "[[ 0.34883721 -0.13953488  0.09302326]\n",
+      " [ 0.3255814   0.06976744 -0.04651163]\n",
+      " [-0.27131783  0.10852713  0.03875969]]\n",
+      "[[ 1.00000000e+00 -1.11022302e-16  7.91033905e-16]\n",
+      " [ 2.77555756e-16  1.00000000e+00  1.11022302e-16]\n",
+      " [-2.77555756e-16  0.00000000e+00  1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize matrix A\n",
+    "A = np.array([[1,2,0],\n",
+    "              [0,5,6],\n",
+    "              [7,0,9]])\n",
+    "\n",
+    "# Transpose A\n",
+    "A_trans = A.transpose()\n",
+    "\n",
+    "# Inverse of A\n",
+    "A_inv = np.linalg.pinv(A)\n",
+    "\n",
+    "# Prove A^(-1)*A = Identity Matrix\n",
+    "I = np.dot(A_inv,A)\n",
+    "\n",
+    "print(A_trans)\n",
+    "print(A_inv)\n",
+    "print(I)"
    ]
   },
   {
