--- a/Notes/Machine Learning - Week 1.ipynb
+++ b/Notes/Machine Learning - Week 1.ipynb
@@ -66,11 +66,11 @@
     "\n",
     "**Cost Function:** A measure of how well the line fits\n",
     "\n",
-    "**MSE (Mean Squared Error):** A measure of the average difference between predicted and actual values $\\rightarrow$ $J(\\theta_1,\\theta_2) = {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}$\n",
+    "**MSE (Mean Squared Error):** A measure of the average difference between predicted and actual values $\\rightarrow$ $J(\\theta_0,\\theta_1) = {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}$\n",
     " - We square to get rid of negatives\n",
     " - We divide average by 2 to make gradient descent differentiation easier\n",
     " - MSE can be visualized as a function of $\\theta_0, \\theta_1$ using contour plots (2D depictions of 3D plots)\n",
-    " - Goal of linear regression is to $\\min_{\\theta_0,\\theta_1}J(\\theta_1,\\theta_2)$"
+    " - Goal of linear regression is to $\\min_{\\theta_0, \\theta_1} J(\\theta_0,\\theta_1) = \\min_{\\theta_0, \\theta_1} {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}$"
    ]
   },
   {
@@ -119,7 +119,23 @@
     "\n",
     "$\\text{Case 2}\\rightarrow j=1: \\frac{\\partial}{\\partial \\theta_1} J(\\theta_0,\\theta_1) = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\cdot x_i$\n",
     "\n",
-    "Cost function for linear regression will always be *convex*, meaning it has only one optimum and it is a global one"
+    "The final gradient descent algorithm is therefore:\n",
+    "\n",
+    "$\\text{repeat until convergence: }$    \n",
+    "&emsp; $\\theta_0 := \\theta_0 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\\\\n",
+    "\\theta_1 := \\theta_1 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\cdot x_i \\\\\n",
+    "\\text{return } \\theta_0, \\theta_1$\n",
+    "\n",
+    "\n",
+    "Cost function for linear regression will always be *convex*, meaning it has only one optimum and it is a global one - don't have to choose between local optima"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Scrap Equations"
    ]
   },
   {
@@ -128,6 +144,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\min_{\\theta_0, \\theta_1} J(\\theta_0,\\theta_1) = \\min_{\\theta_0, \\theta_1} {\\frac{1}{2m}} {\\sum_{i=1}^m {(h_{\\theta}(x_i) - y_i)^2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\text{repeat until convergence: } \\theta_j := \\theta_j - \\alpha \\frac{\\partial}{\\partial \\theta_j} J(\\theta_0,\\theta_1)\n",
+    "\\\\ \\text{ for } j=0, j=1\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\text{repeat until convergence: } \\\\\n",
+    "\\theta_0 := \\theta_0 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\\\\n",
+    "\\theta_1 := \\theta_1 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\cdot x_i \\\\\n",
+    "\\text{return } \\theta_0, \\theta_1\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\text{return } \\theta_0 + \\theta_1x\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
