Started Multiple Linear Regression (Week 2)

--- a/Notes/Machine Learning - Week 1.ipynb
+++ b/Notes/Machine Learning - Week 1.ipynb
@@ -115,15 +115,15 @@
     "\n",
     "$ = \\frac{\\partial}{\\partial \\theta_j} \\frac{1}{2m} {\\sum_{i=1}^m {(\\theta_0 + \\theta_1x_i - y_i)^2}}$\n",
     "\n",
-    "$\\text{Case 1}\\rightarrow j=0: \\frac{\\partial}{\\partial \\theta_0} J(\\theta_0,\\theta_1) = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i)$\n",
+    "$\\text{Case 1}\\rightarrow j=0: \\frac{\\partial}{\\partial \\theta_0} J(\\theta_0,\\theta_1) = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta (x_i) - y_i)$\n",
     "\n",
-    "$\\text{Case 2}\\rightarrow j=1: \\frac{\\partial}{\\partial \\theta_1} J(\\theta_0,\\theta_1) = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\cdot x_i$\n",
+    "$\\text{Case 2}\\rightarrow j=1: \\frac{\\partial}{\\partial \\theta_1} J(\\theta_0,\\theta_1) = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta (x_i) - y_i) \\cdot x_i$\n",
     "\n",
     "The final gradient descent algorithm is therefore:\n",
     "\n",
     "$\\text{repeat until convergence: }$    \n",
-    "&emsp; $\\theta_0 := \\theta_0 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\\\\n",
-    "\\theta_1 := \\theta_1 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta x_i - y_i) \\cdot x_i \\\\\n",
+    "&emsp; $\\theta_0 := \\theta_0 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta (x_i) - y_i) \\\\\n",
+    "\\theta_1 := \\theta_1 - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta (x_i) - y_i) \\cdot x_i \\\\\n",
     "\\text{return } \\theta_0, \\theta_1$\n",
     "\n",
     "\n",
@@ -139,11 +139,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This section is just for drafting LaTeX equations"
+   ]
   },
   {
    "cell_type": "markdown",
