Continued working on week 2

--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -61,19 +61,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Scaling\n",
+    "## Gradient Descent in Practice\n",
     "\n",
-    "**Feature Scaling:** Make sure features are on a similar scale\n",
-    " - Motivation: if variables are of vastly different magnitude, the contour graph will be quite skewed, therefore gradient descent will take long to reach a minimum\n",
+    "### Feature Scaling\n",
+    "\n",
+    "**Feature Scaling:** Make sure features are on a similar scale $\\rightarrow$ $x_i := \\frac{x_i}{s_i}$ where $s_i$ is the range (max - min)\n",
+    " - If variables are of vastly different magnitude, the contour graph will be quite skewed, therefore gradient descent will take long to reach a minimum\n",
     " - Scale features into aprrox. a $-1 \\leq x_i \\leq 1$ range $\\rightarrow$ does not need to be the same for each feature, but should be within:\n",
     "     - Max of $\\pm 3$ \n",
     "     - Min of $\\pm \\frac{1}{3}$\n",
     "\n",
-    "### Types of Feature Scaling\n",
-    "\n",
-    "**Standard Feature Scaling:** $x_i := \\frac{x_i}{s_i)}$ where $s_i$ is the range (max - min)\n",
     "\n",
     "**Mean Normalization:** $x_i := \\frac{x_i-\\mu_i}{s_i}$ where $s_i$ is the range (max - min) or standard deviation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimizing $\\alpha$ Value\n",
+    "\n",
+    "![](img/check-gd-working.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot cost as a function of the number of iterations, and check if decreasing with each iteration $\\rightarrow$ can check convergence visually\n",
+    " - Algorithm to check convergence: Declare convergence if $J(\\theta)$ decreases by less than some small value $\\epsilon$ in one iteration (for example $10^{-3}$)\n",
+    " - If $J(\\theta)$ increases with iterations, or alternates between increasing and decreasing, gradient descent isn't working $\\rightarrow$ use a smaller $\\alpha$\n",
+    " - To choose $\\alpha$, try $\\ldots, 0.001, 0.003, 0.01, 0.03, 0.1, 0.3, 1, \\ldots$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features and Polynomial Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Features can be calculated; for example, given $x_1 = \\text{length}$ and $x_2 = \\text{width}$ we might simply use $x = \\text{area}$ to predict instead"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Polynomial Regression:** Fit a polynomial curve instead of a straight line to the data: $h_\\theta(x) = \\theta_0 + \\theta_1x + \\theta_2x^2 \\leftrightarrow \\theta_0 + \\theta_1x_1 + \\theta_2x_2$ where $x_1 = x$ and $x_2 = x^2$\n",
+    "- Exponents can be fractional (square roots) as well\n",
+    "- Feature scaling may be important when dealing with higher order polynomials"
    ]
   },
   {
