--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -112,9 +112,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Polynomial Regression:** Fit a polynomial curve instead of a straight line to the data: $h_\\theta(x) = \\theta_0 + \\theta_1x + \\theta_2x^2 \\leftrightarrow \\theta_0 + \\theta_1x_1 + \\theta_2x_2$ where $x_1 = x$ and $x_2 = x^2$\n",
+    "**Polynomial Regression:** Fit a polynomial instead of a straight line: $h_\\theta(x) = \\theta_0 + \\theta_1x + \\theta_2x^2 \\leftrightarrow \\theta_0 + \\theta_1x_1 + \\theta_2x_2$ where $x_1 = x$ and $x_2 = x^2$\n",
     "- Exponents can be fractional (square roots) as well\n",
     "- Feature scaling may be important when dealing with higher order polynomials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normal Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Normal Equation:** Method of solving gradient descent analytically instead of iteratively\n",
+    "- Intuition: For every $j$, solve for $\\theta_j$ by equating $\\frac{\\partial}{\\partial\\theta_j}J(\\theta) = 0$\n",
+    "- Feature scaling unnecessary for normal equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Design Matrix $X$:** A matrix containing all our input data used to computer the optimal value of $\\theta$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For every set of training examples $x^{(i)}$, $(x^{(i)})^T$ becomes a row in the design matrix:\n",
+    "\n",
+    "$x^{(i)} = \\begin{bmatrix} x_0^{(i)} \\\\ x_1^{(i)} \\\\ x_2^{(i)} \\\\ \\vdots \\\\ x_n^{(i)} \\end{bmatrix} \\in \\mathbb{R}^{n+1} \\rightarrow X = \\begin{bmatrix} (x^{(1)})^T \\\\ (x^{(2)})^T \\\\ \\vdots \\\\ (x^{(m)})^T \\end{bmatrix} = \\begin{bmatrix} x_0^{(1)} & x_1^{(1)} & x_2^{(1)} & \\dots & x_n^{(1)} \\\\ x_0^{(2)} & x_1^{(2)} & x_2^{(2)} & \\dots & x_n^{(2)} \\\\ \\vdots \\\\ x_0^{(m)} & x_1^{(m)} & x_2^{(m)} & \\dots & x_n^{(m)}\\end{bmatrix}$\n",
+    "\n",
+    "- We also need the $y$ vector:\n",
+    "\n",
+    "$y = \\begin{bmatrix} y^{(1)} \\\\ y^{(2)} \\\\ \\vdots \\\\y^{(m)}\\end{bmatrix}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To solve for $\\theta$ we use:\n",
+    "$\\theta = (X^TX)^{-1}X^Ty$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### When to use Gradient Descent vs. Normal Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Advantages of Gradient Descent:**\n",
+    "- Runtime $O(kn^2)$ where $k$ is number of iterations $\\rightarrow$ compare to normal equation runtime of $O(n^3)$ due to calculating the inverse of an $n \\times n$ matrix ($X^TX)$\n",
+    "- Works well when $n$ is large\n",
+    "\n",
+    "**Advantages of Normal Equation:**\n",
+    "- No need to choose $\\alpha$\n",
+    "- No need to iterate\n",
+    "\n",
+    "\n",
+    "Consider normal equation when $n \\geq 10000$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Issues with Noninvertibility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Noninvertibility:** The matrix $X^TX$ cannot be inverted\n",
+    "- Solution: use `pinv` function\n",
+    "- Two primary causes\n",
+    "    1. Redundant features (linearly dependent): $x_1 = cx_2$\n",
+    "    2. Too many features ($m \\leq n$): Delete features or use regularization"
    ]
   },
   {
