Finished Linear Regression Excercises

--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Cost Function:** $J(\\theta_0,\\theta_1,\\ldots,\\theta_n) = J(\\theta) = \\frac{1}{2m} \\sum_{i=1}^{m} (h_\\theta(x^{(i)}) - y{(i)})^2$\n",
+    "**Cost Function:** $J(\\theta_0,\\theta_1,\\ldots,\\theta_n) = J(\\theta) = \\frac{1}{2m} \\sum_{i=1}^{m} (h_\\theta(x^{(i)}) - y^{(i)})^2$\n",
     "\n",
     "**Gradient Descent Algorithm:**\n",
     "\n",
@@ -200,6 +200,20 @@
     "- Two primary causes\n",
     "    1. Redundant features (linearly dependent): $x_1 = cx_2$\n",
     "    2. Too many features ($m \\leq n$): Delete features or use regularization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vectorization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/vectorization-implementation-in-machine-learning-ca652920c55d"
    ]
   },
   {
