Added vectorization notes

--- a/Exercises/Exercise1/exercise1.ipynb
+++ b/Exercises/Exercise1/exercise1.ipynb
@@ -904,53 +904,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.104e+03 3.000e+00]\n",
-      " [1.600e+03 3.000e+00]\n",
-      " [2.400e+03 3.000e+00]\n",
-      " [1.416e+03 2.000e+00]\n",
-      " [3.000e+03 4.000e+00]\n",
-      " [1.985e+03 4.000e+00]\n",
-      " [1.534e+03 3.000e+00]\n",
-      " [1.427e+03 3.000e+00]\n",
-      " [1.380e+03 3.000e+00]\n",
-      " [1.494e+03 3.000e+00]\n",
-      " [1.940e+03 4.000e+00]\n",
-      " [2.000e+03 3.000e+00]\n",
-      " [1.890e+03 3.000e+00]\n",
-      " [4.478e+03 5.000e+00]\n",
-      " [1.268e+03 3.000e+00]\n",
-      " [2.300e+03 4.000e+00]\n",
-      " [1.320e+03 2.000e+00]\n",
-      " [1.236e+03 3.000e+00]\n",
-      " [2.609e+03 4.000e+00]\n",
-      " [3.031e+03 4.000e+00]\n",
-      " [1.767e+03 3.000e+00]\n",
-      " [1.888e+03 2.000e+00]\n",
-      " [1.604e+03 3.000e+00]\n",
-      " [1.962e+03 4.000e+00]\n",
-      " [3.890e+03 3.000e+00]\n",
-      " [1.100e+03 3.000e+00]\n",
-      " [1.458e+03 3.000e+00]\n",
-      " [2.526e+03 3.000e+00]\n",
-      " [2.200e+03 3.000e+00]\n",
-      " [2.637e+03 3.000e+00]\n",
-      " [1.839e+03 2.000e+00]\n",
-      " [1.000e+03 1.000e+00]\n",
-      " [2.040e+03 4.000e+00]\n",
-      " [3.137e+03 3.000e+00]\n",
-      " [1.811e+03 4.000e+00]\n",
-      " [1.437e+03 3.000e+00]\n",
-      " [1.239e+03 3.000e+00]\n",
-      " [2.132e+03 4.000e+00]\n",
-      " [4.215e+03 4.000e+00]\n",
-      " [2.162e+03 4.000e+00]\n",
-      " [1.664e+03 2.000e+00]\n",
-      " [2.238e+03 3.000e+00]\n",
-      " [2.567e+03 4.000e+00]\n",
-      " [1.200e+03 3.000e+00]\n",
-      " [8.520e+02 2.000e+00]\n",
-      " [1.852e+03 4.000e+00]\n",
-      " [1.203e+03 3.000e+00]]\n",
       "  X[:,0] X[:, 1]         y\n",
       "--------------------------\n",
       "    2104       3    399900\n",
@@ -972,7 +925,6 @@
     "X = data[:, :2]\n",
     "y = data[:, 2]\n",
     "m = y.size\n",
-    "print(X)\n",
     "\n",
     "# print out some data points\n",
     "print('{:>8s}{:>8s}{:>10s}'.format('X[:,0]', 'X[:, 1]', 'y'))\n",
@@ -1103,7 +1055,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): \n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
@@ -1323,7 +1275,7 @@
     "    for i in range(num_iters):\n",
     "        # ======================= YOUR CODE HERE ==========================\n",
     "        prev_theta = theta.copy()\n",
-    "        theta = theta - (alpha/m)*((X@prev_theta)-y)@X\n",
+    "        theta = theta - (alpha/m)*X.T@((X@prev_theta)-y)\n",
     "        # =================================================================\n",
     "        \n",
     "        # save the cost J in every iteration\n",
@@ -1624,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1654,20 +1606,6 @@
     "\n",
     "print('Predicted price of a 1650 sq-ft, 3 br house (using normal equations): ${:.0f}'.format(price))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
