--- a/Notes/Machine Learning - Linear Algebra Review.ipynb
+++ b/Notes/Machine Learning - Linear Algebra Review.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,6 +358,7 @@
     "\n",
     "# Multiply A * v\n",
     "# Note: np.dot (A,v) considers v nx1, np.dot(v,A) considers v 1xn\n",
+    "# Note: we can also use @ as a multiplication symbol i.e. A @ v\n",
     "Av = np.dot(A,v)\n",
     "\n",
     "print(\"Matrix-Vector Multiplication\")\n",
@@ -530,9 +531,9 @@
       "[[ 0.34883721 -0.13953488  0.09302326]\n",
       " [ 0.3255814   0.06976744 -0.04651163]\n",
       " [-0.27131783  0.10852713  0.03875969]]\n",
-      "[[ 1.00000000e+00 -1.11022302e-16  7.91033905e-16]\n",
-      " [ 2.77555756e-16  1.00000000e+00  1.11022302e-16]\n",
-      " [-2.77555756e-16  0.00000000e+00  1.00000000e+00]]\n"
+      "[[ 1.00000000e+00  6.66133815e-16  4.44089210e-16]\n",
+      " [ 2.77555756e-16  1.00000000e+00 -1.11022302e-16]\n",
+      " [-3.88578059e-16  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
    ],
@@ -543,7 +544,7 @@
     "              [7,0,9]])\n",
     "\n",
     "# Transpose A\n",
-    "A_trans = A.transpose()\n",
+    "A_trans = A.T\n",
     "\n",
     "# Inverse of A\n",
     "A_inv = np.linalg.pinv(A)\n",
