--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -206,13 +206,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vectorization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Vectorization\n",
+    "\n",
+    "**Vectorization:** Using matrix algebra to compute gradient descent, as opposed to using `for` loops\n",
+    "\n",
+    "#### Hypothesis\n",
+    "\n",
+    "$h_\\theta(x) = \\theta_0x_0 + \\theta_1x_1 + \\ldots + \\theta_jx_j = \n",
+    "\\begin{bmatrix}x_0^{(1)} & x_1^{(1)} & \\dots & x_j^{(1)} \\\\\n",
+    "x_0^{(2)} & x_1^{(2)} & \\dots & x_j^{(2)} \\\\\n",
+    "\\vdots \\\\\n",
+    "x_0^{(m)} & x_1^{(m)} & \\dots & x_j^{(m)}\n",
+    "\\end{bmatrix} \\cdot \\begin{bmatrix} \\theta_0 \\\\ \\theta_1 \\\\ \\vdots \\\\ \\theta_j \\end{bmatrix} = \n",
+    "X\\theta$\n",
+    "\n",
+    "#### Cost Function\n",
+    "\n",
+    "$J(\\theta) = \\frac{1}{2m} \\sum_{i=1}^{m} (h_\\theta(x^{(i)}) - y^{(i)})^2 = \\frac{1}{2m}(X\\theta-y)^T(X\\theta-y)$\n",
+    "\n",
+    "#### Sum of Derivatives of Cost Function\n",
+    "\n",
+    "$\\frac{\\partial J(\\theta)}{\\partial \\theta} = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)} = \\frac{1}{m}X^T(X\\theta-y)$\n",
+    "\n",
+    "#### Gradient Descent\n",
+    "For each iteration: $\\theta_j := \\theta_j - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)} \\leftrightarrow \\\\ \\theta_j := \\theta_j - \\alpha \\frac{1}{m}X^T(X\\theta-y)$\n",
+    "\n",
+    "\n",
     "https://towardsdatascience.com/vectorization-implementation-in-machine-learning-ca652920c55d"
    ]
   },
