--- a/Exercises/Exercise1/exercise1.ipynb
+++ b/Exercises/Exercise1/exercise1.ipynb
@@ -198,7 +198,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
       "                           Warm up exercise |  10 /  10 | Nice work!\n",
@@ -537,7 +537,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
       "                           Warm up exercise |  10 /  10 | Nice work!\n",
@@ -781,7 +781,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
@@ -1055,7 +1055,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): \n",
+      "Use token from last successful submission? (Y/n): y\n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
@@ -1192,7 +1192,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
@@ -1303,7 +1303,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
@@ -1542,7 +1542,7 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission (sherwynds@gmail.com)? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): y\n",
       "[ 0.5 -0.5]\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
