--- a/Notes/Machine Learning - Linear Algebra Review.ipynb
+++ b/Notes/Machine Learning - Linear Algebra Review.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning - Linear Algebra Review"
+    "<h1><center>Machine Learning - Linear Algebra Review</center></h1>"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notation and Terms"
+    "<h2><center>Notation and Terms</center></h2>"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vector Creation and Dimensions"
+    "<h2><center>Vector Creation and Dimensions</center></h2>"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Addition and Subtraction\n",
+    "<h2><center>Addition and Subtraction</center></h2>\n",
     "\n",
     "Matrix addition and subtraction is *element-wise* $\\rightarrow$ add or subtract corresponding elements\n",
     "\n",
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scalar Multiplication and Division\n",
+    "<h2><center>Scalar Multiplication and Division</center></h2>\n",
     "\n",
     "With scalar multiplication/division, we multiply/divide each element by the scalar\n",
     "\n",
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix-Vector Multiplication and Division\n",
+    "<h2><center>Matrix-Vector Multiplication and Division</center></h2>\n",
     "\n",
     "Map the column of the vector to each row of the matrix, multiply each element, and sum the result\n",
     " - Matrix-vector multiplication results in a vector\n",
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix-Matrix Multiplication\n",
+    "<h2><center>Matrix-Matrix Multiplication</center></h2>\n",
     "\n",
     "Multiply matrix A by matrix B by breaking B into component vectors and multiply A by each vector in B, concatenating the result\n",
     " - $m \\times n$ matrix multiplied by $n \\times o$ matrix results in an $m \\times o$ matrix\n",
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix Multiplication Properties\n",
+    "<h2><center>Matrix Multiplication Properties</center></h2>\n",
     "\n",
     "Matrices are not commutative: $A \\cdot B \\neq B \\cdot A$\n",
     "\n",
@@ -494,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inverse and Transpose\n",
+    "<h2><center>Inverse and Transpose</center></h2>\n",
     "\n",
     "**Inverse of Matrix:** Denoted by $A^{-1}$, multiplying by the inverse results in the identity matrix\n",
     " - Non-square matrices do not have an inverse matrix\n",
