--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning - Week 2"
+    "<h1><center>Machine Learning - Week 2</center></h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Linear Regression"
+    "<h2><center>Multiple Linear Regression</center></h2>"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Descent in Practice\n",
+    "<h2><center>Gradient Descent in Practice</center></h2>\n",
     "\n",
     "### Feature Scaling\n",
     "\n",
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normal Equation"
+    "<h2><center>Normal Equation</center></h2>"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vectorization\n",
+    "<h2><center>Vectorization</center></h2>\n",
     "\n",
     "**Vectorization:** Using matrix algebra to compute gradient descent, as opposed to using `for` loops\n",
     "\n",
