--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -229,7 +229,7 @@
     "$\\frac{\\partial J(\\theta)}{\\partial \\theta} = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)} = \\frac{1}{m}X^T(X\\theta-y)$\n",
     "\n",
     "#### Gradient Descent\n",
-    "For each iteration: $\\theta_j := \\theta_j - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)} \\leftrightarrow \\\\ \\theta_j := \\theta_j - \\alpha \\frac{1}{m}X^T(X\\theta-y)$\n",
+    "For each iteration: $\\theta_j := \\theta_j - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)} \\leftrightarrow \\\\ \\theta := \\theta - \\alpha \\frac{1}{m}X^T(X\\theta-y)$\n",
     "\n",
     "\n",
     "https://towardsdatascience.com/vectorization-implementation-in-machine-learning-ca652920c55d"
