Finished merging notes

--- a/Exercises/Exercise1/exercise1.ipynb
+++ b/Exercises/Exercise1/exercise1.ipynb
@@ -198,7 +198,9 @@
       "\n",
       "Submitting Solutions | Programming Exercise linear-regression\n",
       "\n",
-      "Use token from last successful submission? (Y/n): y\n",
+      "Use token from last successful submission? (Y/n): n\n",
+      "Login (email address): sherwynds@gmail.com\n",
+      "Token: p3laVXusele4PTc3\n",
       "                                  Part Name |     Score | Feedback\n",
       "                                  --------- |     ----- | --------\n",
       "                           Warm up exercise |  10 /  10 | Nice work!\n",
@@ -1583,7 +1585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Theta computed from the normal equations: [89597.90954435   139.21067402 -8738.01911278]\n",
+      "Theta computed from the normal equations: [89597.90954361   139.21067402 -8738.01911255]\n",
       "Predicted price of a 1650 sq-ft, 3 br house (using normal equations): $293081\n"
      ]
     }
