--- a/Notes/Machine Learning - Week 3.ipynb
+++ b/Notes/Machine Learning - Week 3.ipynb
@@ -63,7 +63,33 @@
     "- Produces a *non-convex* curve, with many local extrema ![](img/non-convex.png)\n",
     "- We want a *convex* curve ![](img/convex.png)\n",
     "\n",
-    "Instead, use $\\text{Cost}(h_\\theta(x),y) = \\begin{cases} -\\log(h\\theta(x)) \\space \\space \\space \\space \\space \\space \\space \\space \\space \\space \\space \\space \\text{ if } y=1 \\\\ -\\log((1-h_\\theta(x)) \\space \\space \\space \\space \\text{ if } y=0 \\end{cases} \\space \\space \\space \\space = \\space \\space \\space \\space -y\\log(h_\\theta(x)) - (1-y)\\log(1-h_\\theta(x))$"
+    "Instead: $\\text{Cost}(h_\\theta(x),y) = \\begin{cases} -\\log(h\\theta(x)) \\space \\space \\space \\space \\space \\space \\space \\space \\space \\space \\text{ if } y=1 \\\\ -\\log((1-h_\\theta(x)) \\space \\space \\text{ if } y=0 \\end{cases} \\space \\space \\space \\space \\leftrightarrow \\space \\space \\space \\space -y\\log(h_\\theta(x)) - (1-y)\\log(1-h_\\theta(x))$\n",
+    "\n",
+    "![](img/logistic_regression_1.png) ![](img/logistic_regression_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cost Function:** $J(\\theta) = -\\frac{1}{m} \\sum_{i=1}^m y^{(i)}\\log (h_\\theta(x^{(i)})) + (1-y^{(i)})\\log(1-h_\\theta(x^{(i)}))$\n",
+    "\n",
+    "**Vectorized Cost Function:** $J(\\theta) = \\frac{1}{m}\\cdot(-y^T\\log(h)-(1-y)^T\\log(1-h))$ where $h = g(X\\theta)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent\n",
+    "\n",
+    "Goal is to $\\min_\\theta J(\\theta)$ simultaneously updating each $\\theta_j$\n",
+    "\n",
+    "$\\text{Repeat } \\{ \\\\\n",
+    "\\space \\space \\space \\space \\theta_j = \\theta_j - \\alpha \\frac{\\partial}{\\partial \\theta_j}J(\\theta) = \\theta_j - \\alpha \\frac{1}{m} \\sum_{i=1}^m(h_\\theta(x^{(i)})-y^{(i)})\\cdot x_j^{(i)} \\\\\n",
+    "\\}$\n",
+    "\n",
+    "**Vectorized Gradient Descent:** $\\theta := \\theta - \\frac{\\alpha}{m}X^T(g(X\\theta)-y)$"
    ]
   },
   {
